--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,16 +1,18 @@
-name: Джанго приложение yamdb
+﻿name: Джанго приложение yamdb
 
 on: [push]
 
 jobs:
   tests:
-    # проверка кода на соответствие стандарту PEP8 (с помощью пакета flake8) и запуск pytest из репозитория yamdb_final;
-    runs_on: ubuntu_latest
+    # проверка кода на соответствие стандарту PEP8 (с помощью пакета flake8) и запуск pytest из репозитория yamdb_final
+    name: Тесты
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Проверка репозитория
+        uses: actions/checkout@v2
 
-      - name: Установка Python
+      - name: Настройка python
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
@@ -26,10 +28,61 @@ jobs:
           python -m flake8
           python -m pytest
 
-
   build_push_to_doker_hub:
-    # сборка и доставка докер-образа для контейнера web на Docker Hub;
+    # сборка и доставка докер-образа для контейнера web на Docker Hub
+    name: Отправка Docker образа в Docker Hub
+    needs: tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Проверка репозитория
+        uses: actions/checkout@v2
+
+      - name: Настройка Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Вход в Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Публикация в Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_last:latest
+          file: api_yamdb/Dockerfile
+
   deploy:
-    # автоматический деплой проекта на боевой сервер;
+    # автоматический деплой проекта на боевой сервер
+    name: Деплой
+    needs: build_push_to_doker_hub
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Выполнение дистанционных команд ssh для развертывания
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_last:latest
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/yamdb_last:latest
+
   send_to_telegam:
-    # отправка уведомления в Telegram о том, что процесс деплоя успешно завершился.
+    # отправка уведомления в Telegram о том, что процесс деплоя успешно завершился
+    name: Отправка уведомления в Telegram
+    runs-on: ubuntu-latest
+    needs: deploy
+    
+    steps:
+    - name: Отправка сообщения
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: ${{ github.workflow }} успешно выполнен!
